--- a/sample/Pages/Index.cshtml
+++ b/sample/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a class="text-sky-600" href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a class="text-sky-600" href="https://docs.microsoft.com/aspnet/core" aria-current-state="Page">building Web apps with ASP.NET Core</a>.</p>
 </div>
