--- a/sample/Pages/Shared/_Layout.cshtml
+++ b/sample/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
         class="group flex items-center px-3 py-2 text-sm font-medium rounded-md"
         default-class="text-gray-600 hover:bg-gray-50 hover:text-gray-900"
         current-class="bg-gray-200 text-gray-900"
+        aria-current-state="Page"
       >
         <heroicon-outline
           icon="Home"
@@ -29,6 +30,7 @@
         class="group flex items-center px-3 py-2 text-sm font-medium rounded-md"
         default-class="text-gray-600 hover:bg-gray-50 hover:text-gray-900"
         current-class="bg-gray-200 text-gray-900"
+        aria-current-state="Page"
       >
         <heroicon-outline
           icon="EyeOff"
@@ -52,6 +54,7 @@
         class="group flex items-center px-3 py-2 text-sm font-medium rounded-md"
         default-class="text-gray-600 hover:bg-gray-50 hover:text-gray-900"
         current-class="bg-gray-200 text-gray-900"
+        aria-current-state="Page"
       >
         <heroicon-outline
           icon="ExclamationCircle"
