--- a/sample/Pages/Index.cshtml
+++ b/sample/Pages/Index.cshtml
@@ -24,10 +24,10 @@
         />
       </div>
       <input
-        type="text"
+        type="email"
         asp-for="Input.Email"
-        class="block w-full rounded-md pl-10 sm:text-sm"
-        default-class="transition border-gray-300 focus:border-blue-400 focus:ring-blue-400"
+        class="block w-full rounded-md pl-10 sm:text-sm transition"
+        default-class="border-gray-300 focus:border-blue-400 focus:ring-blue-400"
         error-class="border-red-300 text-red-900 placeholder-red-300 focus:border-red-500 focus:outline-none focus:ring-red-500"
         aria-describedby="@Html.Id("Input.Email")-hint"
       >
