Fix href attribute value extraction

--- a/sample/Pages/Index.cshtml
+++ b/sample/Pages/Index.cshtml
@@ -63,7 +63,7 @@
   <div>
     <button
       type="submit"
-      class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+      class="inline-flex items-center rounded-md border border-transparent bg-sky-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2"
     >
       Submit
     </button>
