Update icon name

--- a/sample/Pages/Shared/_Layout.cshtml
+++ b/sample/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             aria-current-state="Page"
           >
             <heroicon-outline
-              icon="EyeOff"
+              icon="EyeSlash"
               class=" flex-shrink-0 -ml-1 mr-3 h-6 w-6"
               default-class="text-gray-400 group-hover:text-gray-500"
               current-class="text-gray-500"
@@ -59,7 +59,7 @@
             aria-current-state="Page"
           >
             <heroicon-outline
-              icon="EyeOff"
+              icon="EyeSlash"
               class=" flex-shrink-0 -ml-1 mr-3 h-6 w-6"
               default-class="text-gray-400 group-hover:text-gray-500"
               current-class="text-gray-500"
