--- a/sample/Pages/Shared/_Layout.cshtml
+++ b/sample/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             class="group flex items-center px-3 py-2 text-sm font-medium rounded-md"
             default-class="text-gray-600 hover:bg-gray-50 hover:text-gray-900"
             current-class="bg-gray-200 text-gray-900"
-            aria-current-state="Page"
+            aria-current-state="Step"
           >
             <heroicon-outline
               icon="Home"
@@ -72,7 +72,7 @@
             class="group flex items-center px-3 py-2 text-sm font-medium rounded-md"
             default-class="text-gray-600 hover:bg-gray-50 hover:text-gray-900"
             current-class="bg-gray-200 text-gray-900"
-            aria-current-state="Page"
+            aria-current-state="Location"
           >
             <heroicon-outline
               icon="ExclamationCircle"
